Add resetBoard and updateWinner private methods

--- a/style.css
+++ b/style.css
@@ -6,19 +6,59 @@ html, body {
     margin: 0;
 }
 
+header {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    font-size: 2em;
+    background-color: rgb(46, 45, 45);
+    color: white;
+}
 
+.turn-and-winner {
+    display: flex;
+    justify-content: center;
+
+}
 
 #grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 90px);
-    grid-template-rows: repeat(3, 70px);
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: repeat(3, 150px);
     justify-content: center;
     align-items: center;
-    /* border: 1px solid; */
+    gap: 5px;
+    
 }
 
 .child {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 1px solid;
-    width: 90px;
-    height: 70px;
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+    font-size: 2.5rem;
+}
+
+.restart-btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+#restart {
+    padding: 20px 30px;
+    border-radius: 25px;
+    border: none;
+    font-size: 1.5rem;
+    background-color: rgb(44, 46, 46);
+    color: white;
+    cursor: pointer;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
 }
